--- a/master.css
+++ b/master.css
@@ -263,8 +263,10 @@ footer {
 }
 
 .intro {
-  background-color: ;
+  background-color: #ffffff;
   text-align: center;
+  margin: 1%;
+  padding: 1%;
 }
 
 .photo {
